--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Bootstrap-datetimepicker : Date/time picker widget based on twitter bootstrap" />
-
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet">
+    <![endif]-->
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/bootstrap-datetimepicker.min.css">
 
     <title>Bootstrap-datetimepicker</title>
   </head>
@@ -62,6 +71,30 @@
 
 <p>The element also has the bootstrap-datepicker 'changeDate' event and 'setValue' method.</p>
 
+<h3>Demo</h3>
+<p>Example above.</p> 
+<div class="well">
+  <div id="datetimepicker" class="input-append date">
+    <input type="text"></input>
+    <span class="add-on">
+      <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
+    </span>
+  </div>
+</div>
+<script type="text/javascript">
+  $(function() {
+    $('#datetimepicker').datetimepicker({
+      format: 'dd/MM/yy hh:mm',
+      language: 'pt-BR',
+      pickDate: true,
+      pickTime: true,
+      hourStep: 1,
+      minuteStep: 15,
+      secondStep: 30
+    });
+  });
+</script>
+
 <h3>Compilation</h3>
 
 <p>To compile/minify you need to have make, node.js and npm on your $PATH</p>
@@ -82,7 +115,8 @@ $ make build
       </footer>
     </div>
 
-    
-
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> 
+    <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="javascripts/bootstrap-datetimepicker.min.js"></script>
   </body>
 </html>
