Updated demo date format

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ $ make build
     <script type="text/javascript">
       $(function() {
         $('#datetimepicker').datetimepicker({
-          format: 'dd/MM/yy hh:mm',
+          format: 'dd/MM/yyyy hh:mm',
           language: 'pt-BR',
           pickDate: true,
           pickTime: true,
