--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
           <h2 id="project_tagline">Date/time picker widget based on twitter bootstrap</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/tarruda/bootstrap-datetimepicker/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/tarruda/bootstrap-datetimepicker/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="bootstrap-datetimepicker.zip">Download this project as a .zip file</a>
             </section>
         </header>
     </div>
