--- a/test/specs.html
+++ b/test/specs.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -16,7 +17,7 @@
     </script>
     <script src="jquery.js"></script>
     <script src="bootstrap.js"></script>
-    <script src="../build/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="../src/js/bootstrap-datetimepicker.js"></script>
     <script src="specs.js"></script>
     <script>
       if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
