--- a/test/specs.html
+++ b/test/specs.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="mocha"></div>
+    <div id="container"></div>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
     <script>
