--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="bootstrap.css" />
     <link rel="stylesheet" href="../build/css/bootstrap-datetimepicker.min.css" />
     <style type="text/css">
-      /* Helper class to minimize css3 transition effects for tests */
+      /* Helper class to minimize css3 transition effects for testing */
       .no-transition {
         -webkit-transition: height 0.001s;
         -moz-transition: height 0.001s;
