--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 
             <hr />
-
+			<a name="example2"></a>
             <div id="example2">
                 <h4>Example 2</h4>
 
@@ -138,7 +138,7 @@
             </div>
 
             <hr />
-
+			<a name="example3"></a>
             <div id="example3">
                 <h4>Example 3</h4>
 
@@ -197,7 +197,7 @@
             </div>
 
             <hr />
-
+			<a name="example4"></a>
             <div id="example4">
 
                 <h4>Example 4</h4>
@@ -257,7 +257,7 @@
             </div>
 
             <hr />
-
+			<a name="example5"></a>
             <div id="example5">
 
                 <h4>Example 5</h4>
@@ -317,7 +317,7 @@
             </div>
 
             <hr />
-
+			<a name="option"></a>
             <div id="options">
                 <h4>Options</h4>
 
