--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Bootstrap datetimepicker : Date/time picker widget for Twitter Bootstrap v3" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="Content/site.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="Content/bootstrap-datetimepicker.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="Content/pygments-manni.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="content/site.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="content/bootstrap-datetimepicker.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="content/pygments-manni.css" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
