--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">'col-sm-6'</span><span class="nt">&gt;</span>
             <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"form-group"</span><span class="nt">&gt;</span>
                 <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">'input-group date'</span> <span class="na">id=</span><span class="s">'datetimepicker5'</span><span class="nt">&gt;</span>
-                    <span class="nt">&lt;input</span> <span class="na">type=</span><span class="s">'text'</span> <span class="na">class=</span><span class="s">"form-control"</span> <span class="na">data-dateformat=</span><span class="s">"YYYY/MM/DD"</span> <span class="nt">/&gt;</span>
+                    <span class="nt">&lt;input</span> <span class="na">type=</span><span class="s">'text'</span> <span class="na">class=</span><span class="s">"form-control"</span> <span class="na">data-date-format=</span><span class="s">"YYYY/MM/DD"</span> <span class="nt">/&gt;</span>
                     <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"input-group-addon"</span><span class="nt">&gt;&lt;span</span> <span class="na">class=</span><span class="s">"glyphicon glyphicon-time"</span><span class="nt">&gt;&lt;/span&gt;</span>
                     <span class="nt">&lt;/span&gt;</span>
                 <span class="nt">&lt;/div&gt;</span>
