--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#example3">Available Functions</a></li>
                 <li><a href="#example4">Disabling the Date Picker</a></li>
                 <li><a href="#example5">Using custom formats</a></li>
-                <li><a href="#example6">Useing without an icon</a></li>
+                <li><a href="#example6">Using without an icon</a></li>
                 <li><a href="#example7">En/Disabled Dates</a></li>
                 <li><a href="#example8">Using Events</a></li>
                 <li><a href="#example9">Custom Icons</a></li>
@@ -676,7 +676,7 @@
                         <h3 class="panel-title">dp.hide</h3>
                     </div>
                     <div class="panel-body">
-                        Fires when the widget is hiden
+                        Fires when the widget is hidden
                     </div>
                 </div>
                 <div class="panel panel-default">
