--- a/index.html
+++ b/index.html
@@ -629,8 +629,8 @@
     <span class="nx">useSeconds</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>               <span class="c1">//en/disables the seconds picker</span>
     <span class="nx">useCurrent</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>               <span class="c1">//when true, picker will set the value to the current date/time </span>    
     <span class="nx">minuteStepping</span><span class="o">:</span><span class="s1">1</span><span class="p">,</span>               <span class="c1">//set the minute stepping</span>
-    <span class="nx">minDate</span><span class="o">:</span><span class="s1">1/1/1900</span><span class="p">,</span>               <span class="c1">//set a minimum date</span>
-    <span class="nx">maxDate</span><span class="o">:</span> <span class="1">(today +100 years)</span><span class="p">,</span>     <span class="c1">//set a maximum date</span>
+    <span class="nx">minDate</span><span class="o">:</span><span class="s1">`1/1/1900`</span><span class="p">,</span>               <span class="c1">//set a minimum date</span>
+    <span class="nx">maxDate</span><span class="o">:</span> <span class="1"></span><span class="p">,</span>     <span class="c1">//set a maximum date (defaults to today +100 years)</span>
     <span class="nx">showToday</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>                 <span class="c1">//shows the today indicator</span>
     <span class="nx">language</span><span class="o">:</span><span class="s1">'en'</span><span class="p">,</span>                  <span class="c1">//sets language locale</span>
     <span class="nx">defaultDate</span><span class="o">:</span><span class="s1">""</span><span class="p">,</span>                 <span class="c1">//sets a default date, accepts js dates, strings and moment objects</span>
