--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
     <span class="p">}</span>
     <span class="nx">useStrict</span><span class="o">:</span> <span class="kc">false</span><span class="p">,</span>               <span class="c1">//use "strict" when validating dates</span>  
     <span class="nx">sideBySide</span><span class="o">:</span> <span class="kc">false</span><span class="p">,</span>              <span class="c1">//show the date and time picker side by side</span>
-    <span class="nx">daysOfWeekDisabled</span><span class="o">:</span><span class="p">[]</span><span class="p">,</span>          <span class="c1">//for example use daysOfWeekDisabled: [0,6] to disable weekends</span> 
+    <span class="nx">daysOfWeekDisabled</span><span class="o">:</span><span class="p">[]</span>          <span class="c1">//for example use daysOfWeekDisabled: [0,6] to disable weekends</span> 
 <span class="p">};</span>
 </pre>
                 </div>
