--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Bootstrap datetimepicker : Date/time picker widget for Twitter Bootstrap v3" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="content/site.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="content/bootstrap-datetimepicker.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="content/pygments-manni.css" />
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="content/site.css" />
+    <link rel="stylesheet" media="screen" href="content/bootstrap-datetimepicker.css" />
+    <link rel="stylesheet" media="screen" href="content/pygments-manni.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" />
 
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
     <title>Bootstrap datetimepicker</title>
 </head>
@@ -702,10 +702,10 @@
             </footer>
         </div>
     </div>
-    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-    <script type="text/javascript" src="scripts/moment.js"></script>
-    <script type="text/javascript" src="scripts/bootstrap-datetimepicker.js"></script>
-    <script type="text/javascript" src="scripts/locales/bootstrap-datetimepicker.ru.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/moment.js"></script>
+    <script src="scripts/bootstrap-datetimepicker.js"></script>
+    <script src="scripts/locales/bootstrap-datetimepicker.ru.js"></script>
     <script>
         $(function(){
             var $window = $(window), $body   = $(document.body);
