--- a/version2/index.html
+++ b/version2/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="styles/styles.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles/pygments-manni.css" />
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
     <title>Bootstrap datetimepicker</title>
 </head>
