--- a/version1/index.html
+++ b/version1/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../styles/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../styles/pygments-manni.css" />
 
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
     <title>Bootstrap datetimepicker</title>
 </head>
